2003-09-14  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/arrange_profiles.cpp: missing include<> with gcc 2.95

2003-09-14  John Levon  <levon@movementarian.org>

	* libpp/Makefile.am:
	* libpp/split_sample_filename.cpp:
	* libpp/split_sample_filename.h: rename as ...

	* libpp/parse_filename.cpp:
	* libpp/parse_filename.h: ... this

	* libpp/filename_spec.cpp:
	* libpp/arrange_profiles.cpp:
	* libpp/arrange_profiles.h: sort classes for niceness,
	changes from above

	* pp/opreport.cpp: remove needless double check of
	exclude_dependent

	* libutil++/string_manip.cpp: touint should init to 0
	in case of parse failure

2003-09-14  Philippe Elie  <phil.el@wanadoo.fr>

	* configure.in: fix maximum template depth to 50
	* libutil/op_fileio.c: op_get_link() don't truncate silently results
	* m4/sstream.m4: use OP_CXXFLAGS not CXXFLAGS

2003-09-14  John Levon  <levon@movementarian.org>

	* pp/partition_files.h:
	* pp/partition_files.cpp: remove, now unused

2003-09-14  John Levon  <levon@movementarian.org>

	* pp/opannotate.cpp:
	* pp/opannotate_options.cpp:
	* pp/opannotate_options.h: use arrange_profiles API

2003-09-14  John Levon  <levon@movementarian.org>

	* pp/opgprof_options.h:
	* pp/opgprof_options.cpp:
	* pp/opgprof.cpp: use arrange_profiles API

2003-09-14  John Levon  <levon@movementarian.org>

	* libpp/Makefile.am:
	* libpp/arrange_profiles.cpp:
	* libpp/arrange_profiles.h: introduce new
	code for partitioning profiles and handling
	merging

	* libpp/partition_files.h:
	* pp/opreport_options.cpp:
	* pp/opreport_options.h:
	* pp/opreport.cpp: use the above code

	* libpp/format_flags.h:
	* libpp/profile_container.cpp: remove unneeded
	multiple apps hint

	* libpp/count_array.cpp:
	* libpp/count_array.h: remove unnecessary code

2003-09-14  John Levon  <levon@movementarian.org>

	* configure.in: back to 0.7cvs

2003-09-14  John Levon  <levon@movementarian.org>

	* pp/opannotate.cpp: gcc 2.91 workaround
	(in 0.6.1 release)
