@@ -1,3 +1,9 @@
+2003-09-14  John Levon  <levon@movementarian.org>
+
+	* arrange_profiles.h:
+	* arrange_profiles.cpp: Add code to give short names
+	to each class, unused yet
+
 2003-09-14  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* libpp/arrange_profiles.cpp: missing include<> with gcc 2.95
